# cuteedit

./: .gitlab-ci.yml  Cargo.toml  README.md  meson.build  meson_options.txt
build-aux/: me.idlesong.cuteeditDevel.json  run.sh
data/: me.idlesong.cuteedit.desktop.in.in  me.idlesong.cuteedit.gschema.xml.in  me.idlesong.cuteedit.metainfo.xml.in.in  resources.gresource.xml
data/resources/ui/: about_dialog.ui.in  filechooser_dialog.ui  window.ui.in
po/: POTFILES.in
src/: application.rs  main.rs  state.rs  window.rs  window.rs.md  window_state.rs
