[package]
name = "cuteedit"
version = "0.1.0"
authors = ["idlesong <idlesong@gmail.com>"]
edition = "2018"

[dependencies]
gtk = { version = "0.9", features = ["v3_22"] }
glib = "0.10"
gio = { version = "0.9", features = ["v2_46"] }
gdk = "0.13"
sourceview = "0.9.0"
log = "0.4"
env_logger = "0.7"
gettext-rs = { version = "0.4", features = ["gettext-system"] }
tiny-keccak = "1.4.0"
